Fri Apr 30 13:08:04 2004  Gan Deng  <gan.deng@vanderbilt.edu>

        * DnC/DnC_Dump.h:
        * DnC/DnC_Dump.cpp:
        
          Added these two new files. These two files created a
          DnC_Dump class which is used to print out the contents
          of various IDL data structures.

Thu Apr 29 22:56:04 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Deployment.idl:

          Rolled back some changes made on the TargetDataModel
          structures.

Thu Apr 29 22:34:41 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Deployment.idl:

          Changed all the structures in the TargetData Model
          to match what is given in the spec.

Thu Apr 29 22:26:05 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Deployment.idl:

          Made a change in the structure Domain
          to add a new field info_property
          which is of the type Properties.

Thu Apr 29 18:46:51 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Config_Error_Handler.h:
        * DnC/Config_Handlers/Config_Error_Handler.cpp:

          Generic Error Handler class for the main functions
          which we will be writing to dump out the IDL
          data structures populated by the XML handlers.

Thu Apr 29 18:09:41 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Deployment.xsd:

          Fixed a type "xsl" tp "xsd"

Thu Apr 29 17:47:04 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Deployment.xsd:
        * DnC/XMI.xsd:

          Updated the schemaLocation attribute within the
          Deployment.xsd schema and
          added the appropriate XMI.xsd file.

Thu Apr 29 06:13:23 2004  Aniruddha Gokhale  <a.gokhale@vanderbilt.edu>

	* DnC/Deployment.idl:
	  struct ComponentImplementationDescription: Added new field called
	  infoProperty of type Properties (Issue 5967).

	  struct ImplementationRequirement: added a new struct (Issue 6392)

	* Dnc/ConfigHandlers/CompImplDesc_Handler.cpp: