@@ -1,8 +1,15 @@
+Fri Apr 30 17:46:09 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>
+
+	* CIDLC/ExecutorMappingGenerator.cpp:
+
+	  Implemented supporting of forward declared interfaces.
+	  Also some minor tweaking for Intel C++.
+
 Fri Apr 30 13:08:04 2004  Gan Deng  <gan.deng@vanderbilt.edu>
 
         * DnC/DnC_Dump.h:
         * DnC/DnC_Dump.cpp:
-        
+
           Added these two new files. These two files created a
           DnC_Dump class which is used to print out the contents
           of various IDL data structures.
